Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/Sap_Foreign_Key_Master__c.object-meta.xml
<CustomObject>
    <label>Sap Foreign Key Master</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sap Foreign Key Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>