Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/fields/DChCust_Mt__c.field-meta.xml
<CustomField>
    <fullName>DChCust_Mt__c</fullName>
    <label>DChCust/Mt</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>