Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/fields/Distributor_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Channel</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sap_Foreign_Key_Master__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Distributor Channel</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sap_Foreign_Key_Master__c</referenceTo>
    <relationshipLabel>Sap Foreign Key Masters (Distributor Channel)</relationshipLabel>
    <relationshipName>Sap_Foreign_Key_Masters2</relationshipName>
    <type>Lookup</type>
</CustomField>