Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sap_Foreign_Key_Master__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales Office</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sap_Foreign_Key_Master__c</referenceTo>
    <relationshipLabel>Sap Foreign Key Masters</relationshipLabel>
    <relationshipName>Sap_Foreign_Key_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>