Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/recordTypes/Account_Assignment_Group.recordType-meta.xml
<RecordType>
    <fullName>Account_Assignment_Group</fullName>
    <active>true</active>
    <label>Account Assignment Group</label>
</RecordType>