Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/recordTypes/Cus_Pricing_Procedure.recordType-meta.xml
<RecordType>
    <fullName>Cus_Pricing_Procedure</fullName>
    <active>true</active>
    <label>Cus Pricing Procedure</label>
</RecordType>