Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/recordTypes/Delivering_Plant.recordType-meta.xml
<RecordType>
    <fullName>Delivering_Plant</fullName>
    <active>true</active>
    <label>Delivering Plant</label>
</RecordType>