Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/recordTypes/Delivery_Priority.recordType-meta.xml
<RecordType>
    <fullName>Delivery_Priority</fullName>
    <active>true</active>
    <label>Delivery Priority</label>
</RecordType>