Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/recordTypes/Distributor_Channel.recordType-meta.xml
<RecordType>
    <fullName>Distributor_Channel</fullName>
    <active>true</active>
    <label>Distributor Channel</label>
</RecordType>