Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/recordTypes/Division.recordType-meta.xml
<RecordType>
    <fullName>Division</fullName>
    <active>true</active>
    <label>Division</label>
</RecordType>