Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/recordTypes/Incoterms.recordType-meta.xml
<RecordType>
    <fullName>Incoterms</fullName>
    <active>true</active>
    <label>Incoterms</label>
</RecordType>