Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/recordTypes/Payment_Terms.recordType-meta.xml
<RecordType>
    <fullName>Payment_Terms</fullName>
    <active>true</active>
    <label>Payment Terms</label>
</RecordType>