Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/recordTypes/Shipping_Condition.recordType-meta.xml
<RecordType>
    <fullName>Shipping_Condition</fullName>
    <active>true</active>
    <label>Shipping Condition</label>
</RecordType>