Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/listViews/Account_Assignment_Group.listView-meta.xml
<ListView>
    <fullName>Account_Assignment_Group</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sap_Foreign_Key_Master__c.Account_Assignment_Group</value>
    </filters>
    <label>Account Assignment Group</label>
</ListView>