Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/listViews/Credit_Control_Area.listView-meta.xml
<ListView>
    <fullName>Credit_Control_Area</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sap_Foreign_Key_Master__c.Credit_Control_Area</value>
    </filters>
    <label>Credit Control Area</label>
</ListView>