Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/listViews/Cus_Pricing_Procedure.listView-meta.xml
<ListView>
    <fullName>Cus_Pricing_Procedure</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sap_Foreign_Key_Master__c.Cus_Pricing_Procedure</value>
    </filters>
    <label>Cus Pricing Procedure</label>
</ListView>