Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/listViews/Delivery_Plant.listView-meta.xml
<ListView>
    <fullName>Delivery_Plant</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>DChCust_Mt__c</columns>
    <columns>Sales_Organization__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sap_Foreign_Key_Master__c.Delivering_Plant</value>
    </filters>
    <label>Delivery Plant</label>
</ListView>