Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/listViews/Delivery_Priority.listView-meta.xml
<ListView>
    <fullName>Delivery_Priority</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sap_Foreign_Key_Master__c.Delivery_Priority</value>
    </filters>
    <label>Delivery Priority</label>
</ListView>