Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/listViews/Distributor_Channel.listView-meta.xml
<ListView>
    <fullName>Distributor_Channel</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Sales_Organization__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sap_Foreign_Key_Master__c.Distributor_Channel</value>
    </filters>
    <label>Distributor Channel</label>
</ListView>