Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/listViews/Division.listView-meta.xml
<ListView>
    <fullName>Division</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Distributor_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sap_Foreign_Key_Master__c.Division</value>
    </filters>
    <label>Division</label>
</ListView>