Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/listViews/Payment_Terms.listView-meta.xml
<ListView>
    <fullName>Payment_Terms</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sap_Foreign_Key_Master__c.Payment_Terms</value>
    </filters>
    <label>Payment Terms</label>
</ListView>