Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/listViews/Sales_Group.listView-meta.xml
<ListView>
    <fullName>Sales_Group</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Sales_Office__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sap_Foreign_Key_Master__c.Sales_Group</value>
    </filters>
    <label>Sales Group</label>
</ListView>