Partial_14Dec2021/force-app/main/default/objects/Sap_Foreign_Key_Master__c/listViews/Shipping_Condition.listView-meta.xml
<ListView>
    <fullName>Shipping_Condition</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sap_Foreign_Key_Master__c.Shipping_Condition</value>
    </filters>
    <label>Shipping Condition</label>
</ListView>